Accept nested alternative attributes
